--- a/src/pages/login_register/register.module.css
+++ b/src/pages/login_register/register.module.css
@@ -20,17 +20,18 @@ body {
     background-color: white;
     align-items: center;
     justify-content: space-around;
-
     width: 400px;
     height: 500px;
     border-radius: 10px;
 }
 
 .input {
-    height: 50px;
+    height: 45px;
     width: 90%;
     border-radius: 5px;
     border: solid 1px lightgray;
+    font-size: 20px;
+    padding-left: 10px;
 }
 
 .button {
@@ -42,6 +43,7 @@ body {
     color: white;
     font-size: 25px;
     font-weight: bold;
+    cursor: pointer;
 }
 
 .text {
@@ -55,13 +57,13 @@ body {
 }
 
 .sub_button {
-    width: 55%;
+    width: 50%;
     border: solid 1px lightgray;
     border-radius: 5px;
-    height: 50px;
+    height: 40px;
     background-color: #319795;
     color: white;
-    font-size: 20px;
+    font-size: 15px;
     font-weight: bold;
 }
 
