--- a/src/pages/home/maincontent.module.css
+++ b/src/pages/home/maincontent.module.css
@@ -1,7 +1,8 @@
 
 
 .container {
-    margin-top: 20px;
+    /* top: 50px; */
+    margin-top: 50px;
     display: flex;
     justify-content: space-around;
 }
