--- a/src/pages/ux/navbar.module.css
+++ b/src/pages/ux/navbar.module.css
@@ -2,11 +2,13 @@
 
 .container {
     width: 100%;
-    height: 80px;
+    height: 50px;
     background-color: white;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    position: fixed;
+    top: 0;
 }
 
 .logo {
