--- a/src/pages/ux/navbar.module.css
+++ b/src/pages/ux/navbar.module.css
@@ -2,28 +2,150 @@
 
 .container {
     width: 100%;
+    height: 60px;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid lightgray;
+    justify-content: space-between;
+    position: fixed;
+    top: 0;
+
+}
+
+.logo {
+    width: 50px;
     height: 50px;
+    margin-left: 10px;
+}
+
+.avatar {
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+
+}
+
+.input {
+    width: 200px;
+    height: 30px;
+    border-radius: 15px;
+    border: 1px solid lightgray;
+    margin-left: 10px;
+}
+
+.avatarimage {
+    width: 100%;
+    height: 100%;
+}
+
+.icon {
+    width: 30px;
+    /* text-align: center; */
+    /* background-color: lightgray; */
+}
+.sep {
+    width: 100%;
+    /* height: 1px; */
+    border: 1px solid lightgray;
+}
+
+.holder {
+    width: 95%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    /* text-align: center; */
+    margin: 10px;
+    height: 100%;
+
+    border-radius: 5px;
+    cursor: pointer;
+    /* text-align: left; */
+}
+.holder:hover {
+    transition: 0.5s;
+    background-color: lightgray;
+}
+.card {
+    height: 120px;
+    width: 200px;
+    margin-left: -220px;
+    background-color: white;
+    border-radius: 2px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.avatar_info_container {
+    display: flex;
+    justify-content: space-around;
+    /* align-items: flex-start; */
+    position: fixed;
+    top: 70px;
+    left: 100%;
+    transform: translateY(0%);
+
+  }
+  
+  .avatar_info_container.show {
+    opacity: 1;
+  }
+
+
+
+
+
+  /* .container {
+    width: 100%;
+    height: 60px;
     background-color: white;
     display: flex;
     align-items: center;
     justify-content: space-between;
     position: fixed;
     top: 0;
-}
-
-.logo {
+  }
+  
+  .logo {
     width: 50px;
     height: 50px;
-}
-
-.avatar {
+    margin-left: 10px;
+  }
+  
+  .avatar {
     width: 50px;
     height: 50px;
-}
-
-
-
-.avatarimage {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+  }
+  
+  .input {
+    width: 200px;
+    height: 30px;
+    border-radius: 15px;
+    border: 1px solid lightgray;
+    margin-left: 10px;
+  }
+  
+  .avatarimage {
     width: 100%;
     height: 100%;
-}
+  }
+  
+  .card {
+    height: 40px;
+    width: 100px;
+    background-color: black;
+  }
+  
+  .avatar_info_container {
+    position: fixed;
+    top: 30px;
+    transform: translateY(0%);
+  } */
