--- a/src/pages/profile/profile.module.css
+++ b/src/pages/profile/profile.module.css
@@ -6,6 +6,8 @@
     align-items: center;
     /* justify-content: center; */
     width: 100%;
+    position: absolute;
+    top: 60px;
     /* height: 100%; */
     /* height: 700px; */
     /* background-color: white; */
@@ -13,7 +15,6 @@
 
 .containers {
     position: absolute;
-    top: 0;
     width: 100%;
     height: 450px;
     background-color: white;
@@ -144,6 +145,6 @@
 
     }
     .post {
-        width: 40%;
+        width: 60%;
     }
   }
