adding the backend part

--- a/src/pages/home/feedpage/feed.module.css
+++ b/src/pages/home/feedpage/feed.module.css
@@ -28,6 +28,7 @@
 
 .avatar {
     width: 40px;
+    background-color: white;
 }
 
 .sep {
@@ -40,6 +41,7 @@
     height: 40px;
     border-radius: 20px;
     border: 1px solid lightgrey;
+    background-color: #edf2f7;
 }
 
 
