--- a/src/pages/login_register/login.module.css
+++ b/src/pages/login_register/login.module.css
@@ -63,6 +63,11 @@
     color: white;
     font-size: 17px;
     font-weight: bold;
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
 @media screen and (max-width: 680px) {
