--- a/src/pages/ux/navbar.module.css
+++ b/src/pages/ux/navbar.module.css
@@ -37,8 +37,10 @@
 }
 
 .avatarimage {
-    width: 100%;
-    height: 100%;
+    /* width: 100%; */
+    width: 50px;
+    height: 50px;
+
 }
 
 .icon {
@@ -57,13 +59,12 @@
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    /* text-align: center; */
     margin: 10px;
     height: 100%;
-
+    text-decoration: none;
+    color: black;
     border-radius: 5px;
     cursor: pointer;
-    /* text-align: left; */
 }
 .holder:hover {
     transition: 0.5s;
