--- a/src/pages/home/contact.module.css
+++ b/src/pages/home/contact.module.css
@@ -3,24 +3,25 @@
 .container {
     display: flex;
     align-items: center;
-    gap: 5px;
+    justify-content: space-around;
     border: none;
     cursor: pointer;
-    background-color: #edf2f7;
     border-radius: 10px;
     width: 100%;
-    height: 50px;
+    height: 70px;
     text-decoration: none;
+    background-color: white;
 
 }
 
-.container:hover {
-    background-color: lightgray;
-
-}
 
 .avatar {
-    width: 40px;
-    height: 40px;
+    width: 50%;
     border-radius: 25px;
+}
+
+.text {
+    width: 50%;
+    font-size: 14px;
+    color: #426383;
 }
