--- a/src/pages/home/contactspage.module.css
+++ b/src/pages/home/contactspage.module.css
@@ -3,6 +3,47 @@
 .container {
     display: flex;
     flex-direction: column;
+    align-items: center;
     text-align: left;
     width: 250px;
+    height: 450px;
+    background-color: white;
+    border-radius: 30px;
+}
+
+.sub_container {
+    width: 80%;
+    height: 100%;
+    justify-content: space-between;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.friends {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    
+}
+
+.text1 {
+    color: #1A67B1;
+    font-size: 26px;
+}
+
+.text2 {
+    color: #1A67B1;
+    font-size: 14px;
+    cursor: pointer;
+    width: 100%;
+    text-align: center;
+}
+
+@media screen and (max-width: 1100px) {
+
+    .container {
+        display: none;
+
+    }
 }
