--- a/src/pages/ux/navbar.module.css
+++ b/src/pages/ux/navbar.module.css
@@ -2,11 +2,10 @@
 
 .container {
     width: 100%;
-    height: 60px;
+    height: 80px;
     background-color: white;
     display: flex;
     align-items: center;
-    border-bottom: 1px solid lightgray;
     justify-content: space-between;
     position: fixed;
     top: 0;
@@ -16,49 +15,112 @@
 .logo {
     width: 50px;
     height: 50px;
-    margin-left: 10px;
+}
+
+.title {
+  color: #1A67B1;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.logo {
+    width: 50px;
+    height: 50px;
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    cursor: pointer;
+    margin-left: 70px;
+    text-decoration: none;
+
+}
+
+.info {
+  display: flex;
+  align-items: center;
+  gap: 5px;
 }
 
 .avatar {
-    width: 50px;
-    height: 50px;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  height: 100%;
+  align-items: center;
+  cursor: pointer;
+  margin-right: 35px;
+}
 
+
+.searchbar {
+  display: flex;
+  align-items: center;
+  border: 0.2px solid #C9DFF5;
+  width: 250px;
+  height: 40px;
+  border-radius: 15px;
+  margin-left: 10px;
+  gap: 20px;
+}
+
+
+.searchicon {
+  width: 20px;
+  height: 20px;
+  margin-left: 10px;
 }
 
 .input {
-    width: 200px;
-    height: 30px;
-    border-radius: 15px;
-    border: 1px solid lightgray;
-    margin-left: 10px;
+    border: 0;
+    height: 95%;
+    /* width: 80%; */
+    color: #1A67B1;
+}
+
+.input:focus {
+  outline: 0;
+}
+
+.input::placeholder {
+  color: #C9DFF5;
+}
+
+.text {
+  color: #1A67B1;
+  font-size: 16px;
+}
+
+.arrow {
+  margin-top: 5px;
+  width: 8px;
 }
 
 .avatarimage {
-    /* width: 100%; */
     width: 50px;
     height: 50px;
-
 }
 
 .icon {
-    width: 30px;
-    /* text-align: center; */
-    /* background-color: lightgray; */
+    width: 24px;
+}
+
+
+.imagecontainer {
+  width: 20%;
 }
 .sep {
     width: 100%;
-    /* height: 1px; */
-    border: 1px solid lightgray;
+    border: 1px solid #C9DFF5;
 }
 
+
+
 .holder {
-    width: 95%;
+    width: 80%;
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    gap: 20px;
     margin: 10px;
     height: 100%;
     text-decoration: none;
@@ -66,31 +128,44 @@
     border-radius: 5px;
     cursor: pointer;
 }
+
+
 .holder:hover {
     transition: 0.5s;
-    background-color: lightgray;
+    color: #1A67B1;
 }
+
+.text2 {
+  text-align: left;
+  width: 80%;
+}
+
 .card {
     height: 120px;
-    width: 200px;
-    margin-left: -220px;
+    width: 300px;
+    margin-left: -330px;
     background-color: white;
     border-radius: 2px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    border: 2px solid #C9DFF5;
+    border-radius: 6px;
+
 }
+
+
+
 
 .avatar_info_container {
     display: flex;
     justify-content: space-around;
-    /* align-items: flex-start; */
     position: fixed;
-    top: 70px;
+    top: 90px;
     left: 100%;
     transform: translateY(0%);
-
+    transition: 1s;
   }
   
   .avatar_info_container.show {
@@ -99,54 +174,27 @@
 
 
 
-
-
-  /* .container {
-    width: 100%;
-    height: 60px;
-    background-color: white;
+@media screen and (max-width: 1360px) {
+  .text {
+    display: none;
+  }
+  .input {
+    display: none;
+  }
+  .arrow {
+    display: none;
+  }
+  .searchbar {
+    border: 0;
+    width: 50px;
+  }
+  .title {
+    display: none;
+  }
+  .container {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    position: fixed;
-    top: 0;
+
   }
-  
-  .logo {
-    width: 50px;
-    height: 50px;
-    margin-left: 10px;
-  }
-  
-  .avatar {
-    width: 50px;
-    height: 50px;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-  }
-  
-  .input {
-    width: 200px;
-    height: 30px;
-    border-radius: 15px;
-    border: 1px solid lightgray;
-    margin-left: 10px;
-  }
-  
-  .avatarimage {
-    width: 100%;
-    height: 100%;
-  }
-  
-  .card {
-    height: 40px;
-    width: 100px;
-    background-color: black;
-  }
-  
-  .avatar_info_container {
-    position: fixed;
-    top: 30px;
-    transform: translateY(0%);
-  } */
+}
