--- a/src/pages/ux/post.module.css
+++ b/src/pages/ux/post.module.css
@@ -1,64 +1,78 @@
 
 
 .container {
+    display: flex;
+    justify-content: center;
     margin-top: 20px;
-    width: 90%;
+    width: 100%;
     background-color: white;
-    border-radius: 10px;
+    border-radius: 20px;
 }
 
 .avatar {
     width: 50px;
     height: 50px;
+    border-radius: 23px;
 }
 
 .info {
     width: 100%;
     display: flex;
     align-items: center;
-    margin: 10px;
+    margin-left: 10px;
 
 }
 
+.info2 {
+    margin: 12px;
+}
+
+.dots {
+    width: 7px;
+    cursor: pointer;
+}
+
+.date {
+    color: #46A3FF;
+    font-size: 10px;
+}
+
 .description {
+    color: #1A67B1;
     margin-left: 10px;
+}
+
+.container_image {
+    display: flex;
+    justify-content: center;
 }
 
 .image {
     width: 100%;
+    border-radius: 20px;
 }
 
 
 .sub_container {
 
-    display: flex;
+    width: 90%;
     align-items: center;
     justify-content: space-around;
+}
+
+.interactive {
+    display: flex;
+    height: 50px;
+    align-items: center;
+    gap: 10px;
+    margin-left: 10px;
 }
 
 .likecomment {
-    width: 90%;
-    border-top: solid 1px lightgray;
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-    height: 40px
-    
-}
-
-.button {
-    background-color: transparent;
-    border: none;
+    width: 50px;
+    height: 20px;
     cursor: pointer;
-    width: 300px;
-    height: 30px;
-    border-radius: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.button:hover {
-    background-color: #edf2f7;
-    transition: 0.5s;
+    gap: 4px;
+    margin: 10px;
 }
