--- a/src/pages/home/contact.module.css
+++ b/src/pages/home/contact.module.css
@@ -10,7 +10,7 @@
     width: 100%;
     height: 70px;
     text-decoration: none;
-    background-color: white;
+    background-color: transparent;
 
 }
 
