--- a/src/pages/ux/sidebar.module.css
+++ b/src/pages/ux/sidebar.module.css
@@ -56,6 +56,7 @@
 
 .icon {
     width: 30px;
+    height: 30px;
 }
 
 .text {
@@ -63,7 +64,12 @@
     color: #D1DBE8;
     cursor: pointer;
 }
+.text2 {
+    color: #1A67B1;
+    cursor: pointer;
+    width: 50%;
 
+}
 
 
 @media screen and (max-width: 1360px) {
