--- a/src/pages/ux/navbar.module.css
+++ b/src/pages/ux/navbar.module.css
@@ -114,11 +114,13 @@
 
 
 .holder {
-    width: 80%;
+    width: 100%;
     display: flex;
     align-items: center;
+
+    justify-content: center;
     gap: 20px;
-    margin: 10px;
+    margin-left: 30px;
     height: 100%;
     text-decoration: none;
     color: black;
@@ -126,6 +128,13 @@
     cursor: pointer;
 }
 
+.logoutbutton {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 .holder:hover {
     transition: 0.5s;
