--- a/src/pages/login_register/login.module.css
+++ b/src/pages/login_register/login.module.css
@@ -35,6 +35,23 @@
     padding-left: 10px;
 }
 
+.error {
+    color: red;
+    margin-top: 10px;
+    font-size: 14px;
+    animation-name: shake;
+    animation-duration: 0.5s;
+    animation-iteration-count: 1;
+  }
+  
+  @keyframes shake {
+    0% { transform: translateX(0); }
+    20% { transform: translateX(-10px); }
+    40% { transform: translateX(10px); }
+    60% { transform: translateX(-10px); }
+    80% { transform: translateX(10px); }
+    100% { transform: translateX(0); }
+  }
 .button {
     width: 90%;
     border: solid 1px lightgray;
