--- a/src/pages/ux/post.module.css
+++ b/src/pages/ux/post.module.css
@@ -78,3 +78,30 @@
     gap: 4px;
     margin: 10px;
 }
+
+.arrow {
+    width: 50%;
+    height: 50%;
+    transform: rotate(270deg);
+}
+
+.commentinput {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 100px;
+}
+
+.commentinput2 {
+    width: 80%;
+    border: solid 1px #D1DBE8;
+    padding: 15px;
+    border-radius: 10px;
+}
+
+.comments {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
